# dogstatsd-rs-win32

./: Cargo.toml
src/: lib.rs
