[package]
name = "dogstatsd"
version = "0.13.0"
authors = ["<9975355+kitsuneninetails@users.noreply.github.com>", "Matt Casper <matthewvcasper@gmail.com>" ]
license = "MIT"
edition = "2024"
description = "A DogstatsD client for Rust on Win32."
repository = "https://github.com/kitsuneninetails/dogstatsd-rs-win32"
keywords = ["datadog", "dogstatsd", "client"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
retry = "2.0.0"

[dev-dependencies]
tokio = { version = "1.32", features = ["full"] }

[features]
unstable = []
